--- a/accueil.html
+++ b/accueil.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Portfolio - Accueil</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
 <style>
 :root {
     --primary: #4f46e5;
@@ -53,20 +55,39 @@ header {
     z-index: 1000;
     transition: 0.3s;
 }
-body.dark header { background: rgba(18,18,18,0.9); border-color: #333; }
-
-header h1 { 
-    font-size: 1.8rem; 
-    font-weight: 700; 
-    opacity: 0; 
-    transform: translateY(40px); 
-    transition: all 0.8s ease-out; 
+body.dark header {
+    background: rgba(18,18,18,0.9);
+    border-color: #333;
 }
 
-nav a { margin-left: 30px; color: inherit; text-decoration: none; font-weight: 500; position: relative; }
-nav a::after { content: ""; position: absolute; left: 0; bottom: -6px; width: 0%; height: 2px; background: var(--primary); transition: 0.3s; }
+header h1 {
+    font-size: 1.8rem;
+    font-weight: 700;
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
+}
+
+nav a {
+    margin-left: 30px;
+    color: inherit;
+    text-decoration: none;
+    font-weight: 500;
+    position: relative;
+}
+nav a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 0%;
+    height: 2px;
+    background: var(--primary);
+    transition: 0.3s;
+}
 body.dark nav a::after { background: var(--secondary); }
-nav a:hover::after, nav a.active::after { width: 100%; }
+nav a:hover::after,
+nav a.active::after { width: 100%; }
 
 .theme-toggle {
     padding: 10px 20px;
@@ -78,29 +99,33 @@ nav a:hover::after, nav a.active::after { width: 100%; }
     font-weight: 600;
     transition: transform 0.3s, box-shadow 0.3s;
 }
-.theme-toggle:hover { transform: scale(1.2) rotate(6deg); box-shadow: 0 0 25px var(--glow-light); }
-body.dark .theme-toggle:hover { box-shadow: 0 0 30px var(--glow-dark); }
-
-main { 
-    min-height: 100vh; 
-    padding: 140px 20px 50px; 
-    display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center; 
-    text-align: center; 
-    position: relative; 
-    z-index: 1; 
+.theme-toggle:hover {
+    transform: scale(1.2) rotate(6deg);
+    box-shadow: 0 0 25px var(--glow-light);
+}
+body.dark .theme-toggle:hover {
+    box-shadow: 0 0 30px var(--glow-dark);
 }
 
-main h2 { 
-    font-size: 3rem; 
-    margin-bottom: 20px; 
-    opacity: 0; 
-    transform: translateY(40px); 
+main {
+    min-height: 100vh;
+    padding: 140px 20px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+}
+
+main h2 {
+    font-size: 3rem;
+    margin-bottom: 20px;
+    opacity: 0;
+    transform: translateY(40px);
     transition: all 0.8s ease-out;
 }
-/* Néon uniquement sur h2 */
 h2.show {
     opacity: 1;
     transform: translateY(0);
@@ -110,46 +135,62 @@ body.dark h2.show {
     text-shadow: 0 0 5px var(--glow-dark), 0 0 10px var(--glow-dark);
 }
 
-main p { 
-    font-size: 1.2rem; 
-    max-width: 700px; 
-    margin-bottom: 35px; 
-    opacity: 0; 
-    transform: translateY(40px); 
-    transition: all 0.8s ease-out; 
+main p {
+    font-size: 1.2rem;
+    max-width: 700px;
+    margin-bottom: 35px;
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
 }
 
-.button { 
-    padding: 15px 40px; 
-    border-radius: 50px; 
-    background: linear-gradient(90deg, var(--primary), var(--secondary)); 
-    color: #fff; 
-    font-weight: 600; 
-    text-decoration: none; 
-    position: relative; 
-    overflow: hidden; 
-    transition: transform .3s, box-shadow .3s; 
+.button {
+    padding: 15px 40px;
+    border-radius: 50px;
+    background: linear-gradient(90deg, var(--primary), var(--secondary));
+    color: #fff;
+    font-weight: 600;
+    text-decoration: none;
+    position: relative;
+    overflow: hidden;
+    transition: transform .3s, box-shadow .3s;
 }
-.button:hover { 
-    transform: scale(1.1) translateY(-3px); 
-    box-shadow: 0 10px 20px rgba(0,0,0,.25); 
+.button:hover {
+    transform: scale(1.1) translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,.25);
 }
-.button::after { 
-    content: ''; 
-    position: absolute; top: -50%; left: -50%; 
-    width: 200%; height: 200%; 
-    background: rgba(255,255,255,0.2); 
-    transform: rotate(45deg); 
-    transition: .5s; 
+.button::after {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: rgba(255,255,255,0.2);
+    transform: rotate(45deg);
+    transition: .5s;
 }
-.button:hover::after { left: 100%; top: 100%; }
+.button:hover::after {
+    left: 100%;
+    top: 100%;
+}
 
-footer { text-align: center; padding: 30px 0; border-top: 1px solid #ccc; position: relative; z-index: 1; }
+footer {
+    text-align: center;
+    padding: 30px 0;
+    border-top: 1px solid #ccc;
+    position: relative;
+    z-index: 1;
+}
 body.dark footer { border-color: #333; }
 
-@keyframes moveCircle { from { transform: translateY(0) rotate(0deg);} to { transform: translateY(50px) rotate(360deg);} }
+@keyframes moveCircle {
+    from { transform: translateY(0) rotate(0deg); }
+    to { transform: translateY(50px) rotate(360deg); }
+}
 </style>
 </head>
+
 <body>
 
 <div id="background"></div>
@@ -176,52 +217,73 @@ body.dark footer { border-color: #333; }
 <script>
 const toggle = document.querySelector('.theme-toggle');
 
-// --- Gestion thème ---
-const currentTheme = localStorage.getItem('theme');
-if(currentTheme === 'dark'){ 
-    document.body.classList.add('dark'); 
-    toggle.textContent='☀️'; 
+/* ---------- CHARGEMENT DU THEME ---------- */
+const savedTheme = localStorage.getItem('theme');
+if (savedTheme === 'dark') {
+    document.body.classList.add('dark');
+    toggle.textContent = '☀️';
 }
 
+/* ---------- TOGGLE THEME + SAUVEGARDE ---------- */
 toggle.addEventListener('click', () => {
     document.body.classList.toggle('dark');
     toggle.textContent = document.body.classList.contains('dark') ? '☀️' : '🌙';
+
+    localStorage.setItem(
+        'theme',
+        document.body.classList.contains('dark') ? 'dark' : 'light'
+    );
+
     generateCircles();
 });
 
-
-// --- Génération cercles ---
+/* ---------- CERLES ANIMÉS ---------- */
 function generateCircles() {
     const bg = document.getElementById('background');
     bg.innerHTML = '';
-    const count = 30;
-    for(let i=0; i<count; i++){
+
+    for (let i = 0; i < 30; i++) {
         const circle = document.createElement('div');
-        const size = Math.random()*8 + 2;
+        const size = Math.random() * 8 + 2;
+
         circle.style.width = `${size}px`;
         circle.style.height = `${size}px`;
         circle.style.borderRadius = '50%';
         circle.style.position = 'absolute';
-        circle.style.top = `${Math.random()*100}%`;
-        circle.style.left = `${Math.random()*100}%`;
-        circle.style.backgroundColor = document.body.classList.contains('dark') ? 'rgba(255,101,132,0.5)' : 'rgba(79,70,229,0.3)';
-        const duration = Math.random()*5 + 5;
+        circle.style.top = `${Math.random() * 100}%`;
+        circle.style.left = `${Math.random() * 100}%`;
+        circle.style.backgroundColor = document.body.classList.contains('dark')
+            ? 'rgba(255,101,132,0.5)'
+            : 'rgba(79,70,229,0.3)';
+
+        const duration = Math.random() * 5 + 5;
         circle.style.animation = `moveCircle ${duration}s linear infinite alternate`;
+
         bg.appendChild(circle);
     }
 }
 
+/* ---------- AU CHARGEMENT ---------- */
 window.addEventListener('load', () => {
     generateCircles();
 
-    // --- Animation apparition ---
     const h1 = document.querySelector('header h1');
     const h2 = document.querySelector('main h2');
     const p = document.querySelector('main p');
 
-    setTimeout(()=>{ h1.style.opacity = 1; h1.style.transform = 'translateY(0)'; }, 100);
-    setTimeout(()=>{ h2.classList.add('show'); }, 400); // Néon
-    setTimeout(()=>{ p.style.opacity = 1; p.style.transform = 'translateY(0)'; }, 700);
+    setTimeout(() => {
+        h1.style.opacity = 1;
+        h1.style.transform = 'translateY(0)';
+    }, 100);
+
+    setTimeout(() => {
+        h2.classList.add('show');
+    }, 400);
+
+    setTimeout(() => {
+        p.style.opacity = 1;
+        p.style.transform = 'translateY(0)';
+    }, 700);
 });
 </script>
 
