--- a/contact.html
+++ b/contact.html
@@ -4,70 +4,176 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Portfolio - Contact</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
 <style>
 :root {
     --primary: #4f46e5;
     --secondary: #ff6584;
     --light-bg: #f5f5f5;
     --dark-bg: #121212;
+
+    --light-card: #fff;
+    --dark-card: #1e1e1e;
+
     --text-light: #222;
     --text-dark: #e0e0e0;
     --glow-light: rgba(79,70,229,0.5);
     --glow-dark: rgba(255,101,132,0.6);
 }
 
-/* Reset et base */
-* { box-sizing: border-box; margin:0; padding:0; }
+* { box-sizing: border-box; margin: 0; padding: 0; }
+
 body {
     font-family: 'Poppins', sans-serif;
     background: var(--light-bg);
     color: var(--text-light);
-    transition:0.3s;
+    transition: 0.3s;
+    overflow-x: hidden;
 }
 body.dark { background: var(--dark-bg); color: var(--text-dark); }
 
 header {
-    position: fixed; top:0; width:100%; display:flex; justify-content:space-between; align-items:center;
-    padding:20px 50px; background:rgba(255,255,255,0.9); backdrop-filter:blur(10px);
-    border-bottom:1px solid #ccc; z-index:9999; transition:0.3s;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    backdrop-filter: blur(12px);
+    background: rgba(255,255,255,0.9);
+    border-bottom: 1px solid #ccc;
+    z-index: 1000;
+    transition: 0.3s;
 }
-body.dark header { background:rgba(18,18,18,0.9); border-color:#333; }
+body.dark header { background: rgba(18,18,18,0.9); border-color: #333; }
 
-header h1 { font-weight:700; font-size:1.8rem; opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; }
-nav a { margin-left:30px; color:inherit; text-decoration:none; font-weight:500; position:relative; opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; }
-nav a.active::after { content:''; position:absolute; bottom:-5px; left:0; width:100%; height:2px; background:var(--primary); border-radius:2px; }
-nav a:hover { color: var(--primary); }
+header h1 {
+    font-size: 1.8rem;
+    font-weight: 700;
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
+}
+
+nav a {
+    margin-left: 30px;
+    color: inherit;
+    text-decoration: none;
+    font-weight: 500;
+    position: relative;
+
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
+}
+nav a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 0%;
+    height: 2px;
+    background: var(--primary);
+    transition: 0.3s;
+}
+body.dark nav a::after { background: var(--secondary); }
+nav a:hover::after, nav a.active::after { width: 100%; }
 
 .theme-toggle {
-    padding:10px 20px; border:none; border-radius:50px;
+    padding: 10px 20px;
+    border-radius: 50px;
+    border: none;
+    cursor: pointer;
     background: linear-gradient(45deg, var(--primary), var(--secondary));
-    color:#fff; cursor:pointer; font-weight:600;
+    color: white;
+    font-weight: 600;
     transition: transform 0.3s, box-shadow 0.3s;
-    opacity:0; transform:translateY(40px);
-    z-index:10000;
+
+    opacity: 0;
+    transform: translateY(40px);
 }
-.theme-toggle:hover { transform: scale(1.2) rotate(10deg); box-shadow: 0 0 20px var(--glow-light); }
-body.dark .theme-toggle:hover { box-shadow: 0 0 25px var(--glow-dark); }
+.theme-toggle:hover {
+    transform: scale(1.2) rotate(6deg);
+    box-shadow: 0 0 25px var(--glow-light);
+}
+body.dark .theme-toggle:hover { box-shadow: 0 0 30px var(--glow-dark); }
 
-main { padding:140px 20px 50px; max-width:600px; margin:auto; text-align:center; }
-h2 { font-size:2.5rem; margin-bottom:20px; opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; }
-/* Néon pour h2 */
-h2.show { opacity:1; transform:translateY(0); text-shadow:0 0 5px var(--glow-light),0 0 10px var(--glow-light); }
-body.dark h2.show { text-shadow:0 0 5px var(--glow-dark),0 0 10px var(--glow-dark); }
+main {
+    min-height: 100vh;
+    padding: 140px 20px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    max-width: 600px;
+    margin: auto;
+}
 
-form { display:flex; flex-direction:column; gap:20px; margin-top:20px; opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; }
-form.show { opacity:1; transform:translateY(0); }
+main h2 {
+    font-size: 3rem;
+    margin-bottom: 20px;
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
+}
+h2.show {
+    opacity: 1;
+    transform: translateY(0);
+    text-shadow: 0 0 5px var(--glow-light), 0 0 10px var(--glow-light);
+}
+body.dark h2.show {
+    text-shadow: 0 0 5px var(--glow-dark), 0 0 10px var(--glow-dark);
+}
+
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+
+    background: var(--light-card);
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
+}
+body.dark form {
+    background: var(--dark-card);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+}
+form.show { opacity: 1; transform: translateY(0); }
 
 input, textarea {
-    padding:15px; border-radius:10px; border:1px solid #ccc; font-size:1rem; width:100%;
-    transition:0.3s;
+    padding: 15px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+    width: 100%;
+    transition: 0.3s;
+    background: transparent;
+    color: inherit;
 }
-input:focus, textarea:focus { border-color: var(--primary); outline:none; }
+input:focus, textarea:focus { border-color: var(--primary); outline: none; }
 
 .submit-btn {
-    padding:15px 40px; border-radius:50px; background: linear-gradient(90deg, var(--primary), var(--secondary));
-    color:#fff; font-weight:600; border:none; cursor:pointer; transition: transform .3s, box-shadow .3s; position: relative; overflow: hidden;
+    padding: 15px 40px;
+    border-radius: 50px;
+    background: linear-gradient(90deg, var(--primary), var(--secondary));
+    color: #fff;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    transition: transform .3s, box-shadow .3s;
+    position: relative;
+    overflow: hidden;
 }
 .submit-btn:hover {
     transform: scale(1.1) translateY(-3px);
@@ -75,27 +181,49 @@ input:focus, textarea:focus { border-color: var(--primary); outline:none; }
 }
 .submit-btn::after {
     content: '';
-    position: absolute; top: -50%; left: -50%; width: 200%; height: 200%;
-    background: rgba(255,255,255,0.2); transform: rotate(45deg); transition: .5s;
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: rgba(255,255,255,0.2);
+    transform: rotate(45deg);
+    transition: .5s;
 }
 .submit-btn:hover::after { left: 100%; top: 100%; }
 
-.message { display:none; color: green; font-weight:600; margin-top:10px; opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; }
-.message.show { display:block; opacity:1; transform:translateY(0); }
+.message {
+    display: none;
+    color: green;
+    font-weight: 600;
+    margin-top: 10px;
+
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
+}
+.message.show { display: block; opacity: 1; transform: translateY(0); }
 
 footer {
-    text-align:center; padding:30px 0; border-top:1px solid #ccc; margin-top:50px;
-    opacity:0; transform:translateY(40px); transition: all 0.8s ease-out;
+    text-align: center;
+    padding: 30px 0;
+    border-top: 1px solid #ccc;
+    margin-top: 50px;
+
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
 }
-body.dark footer { border-color:#333; }
-footer.show { opacity:1; transform:translateY(0); }
+body.dark footer { border-color: #333; }
+footer.show { opacity: 1; transform: translateY(0); }
 
 @media(max-width:768px) {
-    header { padding:15px 20px; }
-    nav a { margin-left:15px; font-size:0.9rem; }
+    header { padding: 15px 20px; }
+    nav a { margin-left: 15px; font-size: 0.9rem; }
 }
 </style>
 </head>
+
 <body>
 
 <header>
@@ -122,55 +250,83 @@ footer.show { opacity:1; transform:translateY(0); }
 <div class="message" id="success-message">Merci ! Votre message a été envoyé.</div>
 </main>
 
-<footer>
-&copy; 2025 Lucas Lara Peyrière - Tous droits réservés
-</footer>
+<footer>© 2025 Lucas Lara Peyrière – Tous droits réservés</footer>
 
 <script>
-// Theme toggle
 const toggle = document.querySelector('.theme-toggle');
+
+/* ---------- THEME (synchro pages) ---------- */
+const savedTheme = localStorage.getItem('theme');
+if (savedTheme === 'dark') {
+  document.body.classList.add('dark');
+  toggle.textContent = '☀️';
+}
+
 toggle.addEventListener('click', () => {
-    document.body.classList.toggle('dark');
-    toggle.textContent = document.body.classList.contains('dark') ? '☀️' : '🌙';
+  document.body.classList.toggle('dark');
+  toggle.textContent = document.body.classList.contains('dark') ? '☀️' : '🌙';
+
+  localStorage.setItem(
+    'theme',
+    document.body.classList.contains('dark') ? 'dark' : 'light'
+  );
 });
 
-// Formspree AJAX
+window.addEventListener('storage', (e) => {
+  if (e.key === 'theme') {
+    const isDark = e.newValue === 'dark';
+    document.body.classList.toggle('dark', isDark);
+    toggle.textContent = isDark ? '☀️' : '🌙';
+  }
+});
+
+/* ---------- FORMSPREE AJAX ---------- */
 const form = document.getElementById('contact-form');
 const msg = document.getElementById('success-message');
 
 form.addEventListener('submit', async (e) => {
-    e.preventDefault();
-    const formData = new FormData(form);
-    try {
-        const response = await fetch('https://formspree.io/f/xlgrrnrj', {
-            method: 'POST',
-            body: formData,
-            headers: { 'Accept': 'application/json' }
-        });
-        if(response.ok){
-            msg.classList.add('show');
-            form.reset();
-        } else { alert('Erreur lors de l’envoi, veuillez réessayer.'); }
-    } catch(error) { alert('Erreur lors de l’envoi, veuillez réessayer.'); }
+  e.preventDefault();
+  const formData = new FormData(form);
+
+  try {
+    const response = await fetch('https://formspree.io/f/xlgrrnrj', {
+      method: 'POST',
+      body: formData,
+      headers: { 'Accept': 'application/json' }
+    });
+
+    if (response.ok) {
+      msg.classList.add('show');
+      form.reset();
+    } else {
+      alert('Erreur lors de l’envoi, veuillez réessayer.');
+    }
+  } catch (error) {
+    alert('Erreur lors de l’envoi, veuillez réessayer.');
+  }
 });
 
-// Apparition progressive de tous les textes
+/* ---------- ANIMATIONS ---------- */
 window.addEventListener('load', () => {
-    const headerH1 = document.querySelector('header h1');
-    const navLinks = document.querySelectorAll('nav a');
-    const toggleBtn = document.querySelector('.theme-toggle');
-    const h2 = document.querySelector('main h2');
-    const formEl = document.querySelector('form');
-    const footer = document.querySelector('footer');
+  const headerH1 = document.querySelector('header h1');
+  const navLinks = document.querySelectorAll('nav a');
+  const toggleBtn = document.querySelector('.theme-toggle');
+  const h2 = document.querySelector('main h2');
+  const formEl = document.querySelector('form');
+  const footer = document.querySelector('footer');
 
-    setTimeout(() => { headerH1.style.opacity = 1; headerH1.style.transform = 'translateY(0)'; }, 100);
-    navLinks.forEach((link, i) => {
-        setTimeout(() => { link.style.opacity = 1; link.style.transform = 'translateY(0)'; }, 300 + i*100);
-    });
-    setTimeout(() => { toggleBtn.style.opacity = 1; toggleBtn.style.transform = 'translateY(0)'; }, 700);
-    setTimeout(() => { h2.classList.add('show'); }, 900);
-    setTimeout(() => { formEl.classList.add('show'); }, 1100);
-    setTimeout(() => { footer.classList.add('show'); }, 1500);
+  setTimeout(() => { headerH1.style.opacity = 1; headerH1.style.transform = 'translateY(0)'; }, 100);
+
+  navLinks.forEach((link, i) => {
+    setTimeout(() => { link.style.opacity = 1; link.style.transform = 'translateY(0)'; }, 300 + i * 100);
+  });
+
+  setTimeout(() => { toggleBtn.style.opacity = 1; toggleBtn.style.transform = 'translateY(0)'; }, 700);
+
+  setTimeout(() => { h2.classList.add('show'); }, 900);
+  setTimeout(() => { formEl.classList.add('show'); }, 1100);
+
+  setTimeout(() => { footer.classList.add('show'); }, 1500);
 });
 </script>
 
