--- a/projets.html
+++ b/projets.html
@@ -4,163 +4,278 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Portfolio - Projets</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
 <style>
 :root {
     --primary: #4f46e5;
     --secondary: #ff6584;
     --light-bg: #f5f5f5;
     --dark-bg: #121212;
+
     --light-card: #fff;
     --dark-card: #1e1e1e;
+
     --text-light: #222;
     --text-dark: #e0e0e0;
     --glow-light: rgba(79,70,229,0.5);
     --glow-dark: rgba(255,101,132,0.6);
 }
-* { box-sizing: border-box; }
+
+* { box-sizing: border-box; margin: 0; padding: 0; }
 
 body {
-    margin:0; font-family:'Poppins', sans-serif;
-    background: var(--light-bg); color: var(--text-light); transition:0.3s;
+    font-family: 'Poppins', sans-serif;
+    background: var(--light-bg);
+    color: var(--text-light);
+    transition: 0.3s;
+    overflow-x: hidden;
 }
 body.dark { background: var(--dark-bg); color: var(--text-dark); }
 
 header {
-    position: fixed; top:0; width:100%; display:flex; justify-content:space-between; align-items:center;
-    padding:20px 50px; background:rgba(255,255,255,0.9); backdrop-filter:blur(10px);
-    border-bottom:1px solid #ccc; z-index:9999; transition:0.3s;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    backdrop-filter: blur(12px);
+    background: rgba(255,255,255,0.9);
+    border-bottom: 1px solid #ccc;
+    z-index: 1000;
+    transition: 0.3s;
 }
-body.dark header { background:rgba(18,18,18,0.9); border-color:#333; }
+body.dark header { background: rgba(18,18,18,0.9); border-color: #333; }
 
-header h1 { opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; font-weight:700; font-size:1.8rem; }
-nav a {
-    margin-left:30px; color:inherit; text-decoration:none; font-weight:500; position:relative;
-    opacity:0; transform:translateY(40px); transition: all 0.8s ease-out;
+header h1 {
+    font-size: 1.8rem;
+    font-weight: 700;
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
 }
-nav a.active::after { content:''; position:absolute; bottom:-5px; left:0; width:100%; height:2px; background:var(--primary); border-radius:2px; }
-nav a:hover { color: var(--primary); }
+
+/* Nav style Accueil (underline anim) + apparition via JS */
+nav a {
+    margin-left: 30px;
+    color: inherit;
+    text-decoration: none;
+    font-weight: 500;
+    position: relative;
+
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
+}
+nav a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 0%;
+    height: 2px;
+    background: var(--primary);
+    transition: 0.3s;
+}
+body.dark nav a::after { background: var(--secondary); }
+nav a:hover::after, nav a.active::after { width: 100%; }
 
 .theme-toggle {
-    padding:10px 20px; border:none; border-radius:50px;
+    padding: 10px 20px;
+    border-radius: 50px;
+    border: none;
+    cursor: pointer;
     background: linear-gradient(45deg, var(--primary), var(--secondary));
-    color:#fff; cursor:pointer; font-weight:600;
+    color: white;
+    font-weight: 600;
     transition: transform 0.3s, box-shadow 0.3s;
-    opacity:0; transform:translateY(40px);
-    z-index:10000;
+
+    opacity: 0;
+    transform: translateY(40px);
 }
-.theme-toggle:hover { transform: scale(1.2) rotate(10deg); box-shadow: 0 0 20px var(--glow-light); }
-body.dark .theme-toggle:hover { box-shadow: 0 0 25px var(--glow-dark); }
+.theme-toggle:hover {
+    transform: scale(1.2) rotate(6deg);
+    box-shadow: 0 0 25px var(--glow-light);
+}
+body.dark .theme-toggle:hover { box-shadow: 0 0 30px var(--glow-dark); }
 
-main { padding:140px 20px 50px 20px; max-width:1000px; margin:auto; }
+main {
+    min-height: 100vh;
+    padding: 140px 20px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
 
-section { margin-bottom:80px; }
+section { width: 100%; max-width: 1000px; }
+
 section h2 {
-    font-size:2.5rem; margin-bottom:20px; text-align:center;
-    opacity:0; transform:translateY(40px); transition: all 0.8s ease-out;
+    font-size: 3rem;
+    margin-bottom: 20px;
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
 }
-/* Néon pour h2 */
-h2.show { opacity:1; transform:translateY(0); text-shadow:0 0 5px var(--glow-light),0 0 10px var(--glow-light); }
-body.dark h2.show { text-shadow:0 0 5px var(--glow-dark),0 0 10px var(--glow-dark); }
+h2.show {
+    opacity: 1;
+    transform: translateY(0);
+    text-shadow: 0 0 5px var(--glow-light), 0 0 10px var(--glow-light);
+}
+body.dark h2.show {
+    text-shadow: 0 0 5px var(--glow-dark), 0 0 10px var(--glow-dark);
+}
 
-.cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:30px; }
-.card {
-    background:var(--light-card); padding:30px; border-radius:20px;
-    box-shadow:0 8px 20px rgba(0,0,0,0.1); text-align:center;
-    opacity:0; transform:translateY(40px); transition: all 0.8s ease-out;
+.cards {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 30px;
+    margin-top: 20px;
 }
-body.dark .card { background: var(--dark-card); box-shadow:0 8px 20px rgba(0,0,0,0.5); }
-.card.show { opacity:1; transform:translateY(0); }
-.card h3, .card p { opacity:0; transform:translateY(40px); transition: all 0.8s ease-out; }
-.card h3.show, .card p.show { opacity:1; transform:translateY(0); }
-.card:hover { transform:translateY(-10px); }
+
+.card {
+    background: var(--light-card);
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    text-align: center;
+    transition: 0.3s;
+    opacity: 0;
+    transform: translateY(40px);
+}
+body.dark .card { background: var(--dark-card); box-shadow: 0 8px 20px rgba(0,0,0,0.5); }
+.card.show { opacity: 1; transform: translateY(0); }
+.card:hover { transform: translateY(-10px); }
+
+.card h3, .card p {
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
+}
+.card h3.show, .card p.show { opacity: 1; transform: translateY(0); }
 
 footer {
-    text-align:center; padding:30px 0; border-top:1px solid #ccc; margin-top:50px;
-    opacity:0; transform:translateY(40px); transition: all 0.8s ease-out;
+    text-align: center;
+    padding: 30px 0;
+    border-top: 1px solid #ccc;
+    margin-top: 50px;
+
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 0.8s ease-out;
 }
-body.dark footer { border-color:#333; }
-footer.show { opacity:1; transform:translateY(0); }
+body.dark footer { border-color: #333; }
+footer.show { opacity: 1; transform: translateY(0); }
 
 @media(max-width:768px) {
-    header { padding:15px 20px; }
-    nav a { margin-left:15px; font-size:0.9rem; }
+    header { padding: 15px 20px; }
+    nav a { margin-left: 15px; font-size: 0.9rem; }
 }
 </style>
 </head>
+
 <body>
 
 <header>
-<h1>Lucas Lara Peyrière</h1>
-<nav>
-    <a href="accueil.html">Accueil</a>
-    <a href="competences.html">Compétences</a>
-    <a href="projets.html" class="active">Projets</a>
-    <a href="contact.html">Contact</a>
-</nav>
-<button class="theme-toggle">🌙</button>
+    <h1>Lucas Lara Peyrière</h1>
+    <nav>
+        <a href="accueil.html">Accueil</a>
+        <a href="competences.html">Compétences</a>
+        <a href="projets.html" class="active">Projets</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <button class="theme-toggle">🌙</button>
 </header>
 
 <main>
 <section>
-<h2>Mes Projets</h2>
-<div class="cards">
-    <div class="card"><h3>Portfolio Animé</h3><p>Site interactif avec animations modernes.</p></div>
-    <div class="card"><h3>Application de Gestion</h3><p>Interface intuitive pour tâches et projets.</p></div>
-    <div class="card"><h3>Landing Page Marketing</h3><p>Page responsive et esthétique pour produits.</p></div>
-    <div class="card"><h3>Blog Personnel</h3><p>Plateforme de contenu avec design épuré.</p></div>
-</div>
+    <h2>Mes Projets</h2>
+
+    <div class="cards">
+        <div class="card">
+            <h3>Projet 1</h3>
+            <p>Description courte du projet (ex : site vitrine, application, etc.).</p>
+        </div>
+        <div class="card">
+            <h3>Projet 2</h3>
+            <p>Description courte du projet (ex : jeu, portfolio, API, etc.).</p>
+        </div>
+        <div class="card">
+            <h3>Projet 3</h3>
+            <p>Description courte du projet (ex : dashboard, e-commerce, etc.).</p>
+        </div>
+        <div class="card">
+            <h3>Projet 4</h3>
+            <p>Description courte du projet (ex : maquette UI/UX, refonte, etc.).</p>
+        </div>
+    </div>
 </section>
 </main>
 
-<footer>
-&copy; 2025 Lucas Lara Peyrière - Tous droits réservés
-</footer>
+<footer>© 2025 Lucas Lara Peyrière – Tous droits réservés</footer>
 
 <script>
-// Theme toggle
 const toggle = document.querySelector('.theme-toggle');
+
+/* ---------- THEME (synchro pages) ---------- */
+const savedTheme = localStorage.getItem('theme');
+if (savedTheme === 'dark') {
+  document.body.classList.add('dark');
+  toggle.textContent = '☀️';
+}
+
 toggle.addEventListener('click', () => {
-    document.body.classList.toggle('dark');
-    toggle.textContent = document.body.classList.contains('dark') ? '☀️' : '🌙';
+  document.body.classList.toggle('dark');
+  toggle.textContent = document.body.classList.contains('dark') ? '☀️' : '🌙';
+
+  localStorage.setItem(
+    'theme',
+    document.body.classList.contains('dark') ? 'dark' : 'light'
+  );
 });
 
-// Apparition progressive de tous les textes
+window.addEventListener('storage', (e) => {
+  if (e.key === 'theme') {
+    const isDark = e.newValue === 'dark';
+    document.body.classList.toggle('dark', isDark);
+    toggle.textContent = isDark ? '☀️' : '🌙';
+  }
+});
+
+/* ---------- ANIMATIONS ---------- */
 window.addEventListener('load', () => {
-    const headerH1 = document.querySelector('header h1');
-    const navLinks = document.querySelectorAll('nav a');
-    const toggleBtn = document.querySelector('.theme-toggle');
-    const h2 = document.querySelector('section h2');
-    const cards = document.querySelectorAll('.card');
-    const footer = document.querySelector('footer');
+  const headerH1 = document.querySelector('header h1');
+  const navLinks = document.querySelectorAll('nav a');
+  const toggleBtn = document.querySelector('.theme-toggle');
+  const h2 = document.querySelector('section h2');
+  const cards = document.querySelectorAll('.card');
+  const footer = document.querySelector('footer');
 
-    // Header
-    setTimeout(() => { headerH1.style.opacity = 1; headerH1.style.transform = 'translateY(0)'; }, 100);
+  setTimeout(() => { headerH1.style.opacity = 1; headerH1.style.transform = 'translateY(0)'; }, 100);
 
-    // Nav links
-    navLinks.forEach((link, i) => {
-        setTimeout(() => { link.style.opacity = 1; link.style.transform = 'translateY(0)'; }, 300 + i * 100);
-    });
+  navLinks.forEach((link, i) => {
+    setTimeout(() => { link.style.opacity = 1; link.style.transform = 'translateY(0)'; }, 300 + i * 100);
+  });
 
-    // Theme button
-    setTimeout(() => { toggleBtn.style.opacity = 1; toggleBtn.style.transform = 'translateY(0)'; }, 700);
+  setTimeout(() => { toggleBtn.style.opacity = 1; toggleBtn.style.transform = 'translateY(0)'; }, 700);
+  setTimeout(() => { h2.classList.add('show'); }, 900);
 
-    // H2 néon
-    setTimeout(() => { h2.classList.add('show'); }, 900);
+  cards.forEach((card, i) => {
+    setTimeout(() => {
+      card.classList.add('show');
+      const h3 = card.querySelector('h3');
+      const p = card.querySelector('p');
+      setTimeout(() => { h3.classList.add('show'); }, 100);
+      setTimeout(() => { p.classList.add('show'); }, 300);
+    }, 1100 + i * 200);
+  });
 
-    // Cartes et leur contenu
-    cards.forEach((card, i) => {
-        setTimeout(() => { 
-            card.classList.add('show'); 
-            const h3 = card.querySelector('h3');
-            const p = card.querySelector('p');
-            setTimeout(() => { h3.classList.add('show'); }, 100);
-            setTimeout(() => { p.classList.add('show'); }, 300);
-        }, 1100 + i * 200);
-    });
-
-    // Footer
-    setTimeout(() => { footer.classList.add('show'); }, 2000);
+  setTimeout(() => { footer.classList.add('show'); }, 2000);
 });
 </script>
 
